# plisken

./: pyproject.toml  requirements.txt
plisken/: __main__.py  cli.py  config.py  new_function.sh  new_model.sh  new_project.sh  settings.toml
