[tool.poetry]
name = "plisken"
version = "0.1.0"
description = ""
authors = ["louipasquini <louipasquini@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
typer = "^0.9.0"
rich = "^13.7.1"

[tool.poetry.scripts]
plisken = "plisken.__main__:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
